--- a/blm.html
+++ b/blm.html
@@ -10,6 +10,7 @@
 </div>
 <div id="nav"><hr /> <!-- Navigation start -->
 	<nav>
+		<a href="index.html">HOME</a>
 	<!-- Tanks --><span>[Tanks]</span>
 		<a href="pld.html">PLD</a>
 		<a href="war.html">WAR</a>
