--- a/blm.html
+++ b/blm.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Copied Factor - BLM Guide</title>
+	<title>Copied Factory | BLM Guide</title>
 </head>
 <body>
 <!-- oh you're reading this? have fun! -->
