--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 <body>
 <!-- oh you're reading this? have fun! -->
 <div id="header">
-	<h1 style="display:inline">Copied Factory</h1><span><em>A website.</em><span>
+	<h1 style="display:inline">Copied Factory</h1><span><em>A website.</em></span>
 </div>
 <div id="nav"><hr /> <!-- Navigation start -->
 	<nav>
