--- a/ast.html
+++ b/ast.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Copied Factory</title>
+	<title>Copied Factory | AST</title>
 	<link rel="stylesheet" href="downwith.css">
 </head>
 <body>
@@ -44,7 +44,7 @@
 
 	<div id="body">
 	
-	<h1>Error 404: This doesn't exist. Probably because I didn't make it. Your loss.
+		<image src="images/noast.png" alt="this is for rathi..." style="width:100%;">
 	
 	</div>
 
