--- a/blm.html
+++ b/blm.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Page Title</title>
+	<link rel="stylesheet" href="downwith.css">
 </head>
 <body>
 <!-- oh you're reading this? have fun! -->
@@ -45,8 +46,9 @@
 	
 <h2>5.X BLM Guide</h2>
 	<em>Last updated: April 15, 2020</em>
-<nav>
+
 <h3 id="cont">Contents</h3>
+<nav style="margin-left:1em;">
 <a href="#gen">General Info</a><br />
 <a href="#open">Openers</a><br />
 <a href="#rot">Single Target Rotation</a><br />
@@ -60,7 +62,7 @@
 <a href="#append">Appendix</a><br />
 </nav>
 
-<p>My IGN is Caro Kann, and I’m a BLM main (now SCH (AND NOW AST) :pepega:) and this is my guide for playing 5.X BLM. In this guide, I go over the basics of the BLM rotation and offer some potential optimizations.</p>
+<p style="margin-left:0px;">My IGN is Caro Kann, and I’m a BLM main (now SCH (AND NOW AST) :pepega:) and this is my guide for playing 5.X BLM. In this guide, I go over the basics of the BLM rotation and offer some potential optimizations.</p>
 
 
 <br /><h3 id="gen">General Info</h3><hr />
@@ -68,7 +70,7 @@
 		<p>If you’re in game, look at your Actions & Traits page. Read your tooltips. Read your traits, they alter tooltips sometimes. If you’re not in game, look at SE’s <a href="https://na.finalfantasyxiv.com/jobguide/blackmage/">Job Guide</a> page.</p>
 		
 	<h4>Abbreviations</h4>
-		<pre><b>F1, F2, F3, F4:</b> Fire Spells
+<ul style="margin-left:1em;"><b>F1, F2, F3, F4:</b> Fire Spells
 <b>F3P:</b> Firestarter (F3 Proc)
 <b>B1, B3, B4:</b> Blizzard Spells
 <b>T3, T4:</b> Thunder Spells
