--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Copied Factory</title>
+	<link rel="stylesheet" href="downwith.css">
 </head>
 <body>
 <!-- oh you're reading this? have fun! -->
