--- a/blm.html
+++ b/blm.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 <head>
-	<title>Page Title</title>
+	<title>Copied Factory | BLM</title>
 	<link rel="stylesheet" href="downwith.css">
+	<meta charset="UTF-8">
 </head>
 <body>
 <!-- oh you're reading this? have fun! -->
@@ -48,7 +49,7 @@
 	<em>Last updated: April 15, 2020</em>
 
 <h3 id="cont">Contents</h3>
-<nav style="margin-left:1em;">
+<nav style="margin-left:2em;">
 <a href="#gen">General Info</a><br />
 <a href="#open">Openers</a><br />
 <a href="#rot">Single Target Rotation</a><br />
@@ -62,7 +63,7 @@
 <a href="#append">Appendix</a><br />
 </nav>
 
-<p style="margin-left:0px;">My IGN is Caro Kann, and I’m a BLM main (now SCH (AND NOW AST) :pepega:) and this is my guide for playing 5.X BLM. In this guide, I go over the basics of the BLM rotation and offer some potential optimizations.</p>
+<p style="margin-left:0;">My IGN is Caro Kann, and I’m a BLM main (now SCH (AND NOW AST) :pepega:) and this is my guide for playing 5.X BLM. In this guide, I go over the basics of the BLM rotation and offer some potential optimizations.</p>
 
 
 <br /><h3 id="gen">General Info</h3><hr />
@@ -70,20 +71,22 @@
 		<p>If you’re in game, look at your Actions & Traits page. Read your tooltips. Read your traits, they alter tooltips sometimes. If you’re not in game, look at SE’s <a href="https://na.finalfantasyxiv.com/jobguide/blackmage/">Job Guide</a> page.</p>
 		
 	<h4>Abbreviations</h4>
-<ul style="margin-left:1em;"><b>F1, F2, F3, F4:</b> Fire Spells
-<b>F3P:</b> Firestarter (F3 Proc)
-<b>B1, B3, B4:</b> Blizzard Spells
-<b>T3, T4:</b> Thunder Spells
-<b>T3P, T4P, TC:</b> T3 Proc, T4 Proc, Thundercloud
-<b>AF, UI:</b> Astral Fire and Umbral Ice buffs. The number refers to how many stacks
-<b>LL:</b> Ley Lines.
-<b>GCD, oGCD:</b> Global Cooldown (Spells), off-Global Cooldown (Abilities)
-<b>SpS:</b> Spell Speed
-<b>AM / BtL:</b> Aetherial Manipulation and Between the Lines
-<b>MF:</b> Manafont
-<b>DoT:</b> Damage over Time
-<b>DPS / PPS:</b> Damage Per Second and Potency Per Second
-<b>Instant:</b> An instant-cast Spell</pre>
+		<ul style="list-style-type:none;padding:0;margin-left:2em;">
+			<li><b>F1, F2, F3, F4:</b> Fire Spells</li>
+			<li><b>F3P:</b> Firestarter (F3 Proc)</li>
+			<li><b>B1, B3, B4:</b> Blizzard Spells</li>
+			<li><b>T3, T4:</b> Thunder Spells</li>
+			<li><b>T3P, T4P, TC:</b> T3 Proc, T4 Proc, Thundercloud</li>
+			<li><b>AF, UI:</b> Astral Fire and Umbral Ice buffs. The number refers to how many stacks</li>
+			<li><b>LL:</b> Ley Lines.</li>
+			<li><b>GCD, oGCD:</b> Global Cooldown (Spells), off-Global Cooldown (Abilities)</li>
+			<li><b>SpS:</b> Spell Speed</li>
+			<li><b>AM / BtL:</b> Aetherial Manipulation and Between the Lines</li>
+			<li><b>MF:</b> Manafont</li>
+			<li><b>DoT:</b> Damage over Time</li>
+			<li><b>DPS / PPS:</b> Damage Per Second and Potency Per Second</li>
+			<li><b>Instant:</b> An instant-cast Spell</li>
+		</ul>
 
 	<h4>AF and UI</h4>
 		<p>Astral Fire and Umbral Ice do a lot of things. Skim over and make sure you’re not working with misconceptions, particularly about damage buff values. (Imgur Mirror)</p>
