--- a/ast.html
+++ b/ast.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Copied Factory | AST</title>
 	<link rel="stylesheet" href="downwith.css">
+	<meta charset="UTF-8">
 </head>
 <body>
 <!-- oh you're reading this? have fun! -->
