images and formatting

--- a/blm.html
+++ b/blm.html
@@ -49,7 +49,7 @@
 	<em>Last updated: April 15, 2020</em>
 
 <h3 id="cont">Contents</h3>
-<nav style="margin-left:2em;">
+<nav style="margin-left:1em;">
 <a href="#gen">General Info</a><br />
 <a href="#open">Openers</a><br />
 <a href="#rot">Single Target Rotation</a><br />
@@ -71,7 +71,7 @@
 		<p>If you’re in game, look at your Actions & Traits page. Read your tooltips. Read your traits, they alter tooltips sometimes. If you’re not in game, look at SE’s <a href="https://na.finalfantasyxiv.com/jobguide/blackmage/">Job Guide</a> page.</p>
 		
 	<h4>Abbreviations</h4>
-		<ul style="list-style-type:none;padding:0;margin-left:2em;">
+		<ul style="list-style-type:none;padding:0;margin-left:1em;">
 			<li><b>F1, F2, F3, F4:</b> Fire Spells</li>
 			<li><b>F3P:</b> Firestarter (F3 Proc)</li>
 			<li><b>B1, B3, B4:</b> Blizzard Spells</li>
@@ -105,26 +105,32 @@
 	<li>&gt;3600: JP opener</li></ul>
 
 	<h4>JP Opener</h4>
-		<em>Precast: Sharp at -12s and F3 at -4s.</em>
+		<img src="images/blm/jpopener.png" />
+		<p><em>Precast: Sharp at -12s and F3 at -4s.</em></p>
 		<p>This is a reliable opener for especially high spellspeed sets, because it does not rely on having a polyglot stack available in time for Xeno for filler at the end that other openers utilize. However, in order to ensure that the thundercloud proc will last long enough to use instead, 3600+ SpS is required. Below this threshold, the thundercloud proc can fall off losing you a chunk of damage.</p>
 
 	<h4>Modified JP Opener</h4>
-		<em>Precast: Sharp at -12s, LL at -4s, and F3 at -3s.</em>
+		<img src="images/blm/jpmod.png" />
+		<p><em>Precast: Sharp at -12s, LL at -4s, and F3 at -3s.</em></p>
 		<p>This is an extension of the JP Opener which utilizes pre-pull LL use to lower the spellspeed requirement while still taking advantage of not having Xeno available in time for UI filler that you need for other openers. While technically possible around the 1929 SpS tier this variant is mostly recommended as an option for the 2500-3600 SpS range.</p>
 
 	<h4>No B4 Opener</h4>
-		<em>Precast: Sharp anywhere between -12s and -5s, and B3 at -4s.</em>
+		<img src="images/blm/nob4opener.png" />
+		<p><em>Precast: Sharp anywhere between -12s and -5s, and B3 at -4s.</em></p>
 		<p>This opener is viable at low to moderate spellspeed values, and is usually the most recommended opener to use in the 558-2500 SpS range. Below around 1421 SpS you will need to weave in Swift under Triple in order to get to the Despair in time, as pictured here:</p>
+		<img src="images/blm/nob4fast.png" />
 		<p>Above 2500 SpS, you begin to run into the issue where Xeno will not be available at the end of the opener as pictured, even when not using Swiftcast.  At this point, it is still viable to use the No B4 opener by using F3 immediately after the B4 instead of waiting on Xeno. Depending on MP tick timing, sometimes you will only get one MP tick here, and sometimes you will get two ticks, resulting in a variable second AF cycle. Extending out the openers to include these two possibilities:</p>
 			<h5>One tick:</h5>
+				<img src="images/blm/onetick.png" />
 				<p>This abbreviated F4x4 -> Despair AF cycle is a bit more immobile/tight on AF timing and might not work out well in a given fight.</p>
 			<h5>Two ticks:</h5>
+				<img src="images/blm/twoticks.png" />
 				<p>With two MP ticks you have enough MP to do a standard AF cycle.</p>
 
 	<h4>Double Sharp Opener</h4>
-		<em>Precast: Sharp at -12s, and B3 at -4s.</em>
+		<img src="images/blm/doublesharp.png" />
+		<p><em>Precast: Sharp at -12s, and B3 at -4s.</em></p>
 		<p>Good general purpose opener to fall back on, if other openers are not as viable, for whatever reason. The opener is long enough that there is no issue with Xeno being available in UI in time.</p>
-
 
 	<h4>Variations</h4>  
 		<p>The openers above aren’t absolute. Alter them to fit fight requirements. Add Swift after an instant to cover an extra F4 / Despair or hold for fight mechanics.</p>
@@ -133,6 +139,7 @@
 
 <br /><h3 id="rot">Single Target Rotation</h3><hr />
 	<h4>Base Rotation</h4>
+		<img src="images/blm/baserot.png" />
 		<p>Base rotation before procs. This can be split into two parts: the Ice Phase and the Fire Phase. Thunder and Xeno placement are less clearly defined. <em>The empty GCDs represent filler: B4, T3, and/or Xeno.</em></p>
 	<h4>Thunder</h4>
 		<p>Thunder should be kept up as much as possible, unless the target will die or phase. T3 can be freely cast in either Ice or Fire Phase. Refrain from refreshing T3 unless the DoT will run out.<p>
@@ -145,10 +152,13 @@
 		<p>Use the Ice Phase to gain Umbral Hearts and recover MP. Use B3 to enter UI, and cast one to two filler Spells to allow MP to regenerate. Filler is typically B4 followed by either Xeno or T3. If you get a fast MP tick, you may also cast only one filler Spell.</p>
 		<h5>Examples</h5>
 		<h6>Standard</h6>
+			<img src="images/blm/icestand.png" />
 			<p>Use this for all usual Ice Phases. T3 can be cast before B4 if you get a fast MP tick. Xeno can replace T3 if the DoT is still ticking.</p>
 		<h6>No Xeno or T3 filler</h6>
+			<img src="images/blm/noxeno.png" />
 			<p>If the T3 DoT is still active when finishing the B4 cast and you don’t have Xeno for UI, wait up to ~1 second for the MP tick. See the Appendix for an alternative option.</p>
 		<h6>Phase Transition</h6>
+			<img src="images/blm/phasetrans.png" />
 			<p>Use this if the enemy would die or phase before a full Fire Phase.</p>
 	<h4>Fire Phase</h4>
 		<p>The Fire Phase consists of 6 F4s, a F1, and Despair. You can generally fit 4 non-Despair GCDs on either side of F1.</p>
@@ -156,9 +166,11 @@
 		<p>Use Firestarter procs for movement, to extend AF3, or to weave a Swift / Triple to be used on F4 / Despairs. Use F3P at the end of a Fire Phase rather than saving it to enter AF. If you know for absolute certainty that the F3P will replace a stronger spell, click it off instead of using it in UI.</p>
 		<h5>Examples</h5>
 		<h6>No Procs</h6>
+			<img src="images/blm/noprocs.png" />
 			<p>Standard Fire Phase if no procs.</p>
 		<h6>Thunder Reapplication / Proc Usage</h6>
-		<p>Thunder reapplication is not strict. You can move the cast / proc between any two GCDs in the Fire Phase.</p>
+			<img src="images/blm/procuse.png" />
+			<p>Thunder reapplication is not strict. You can move the cast / proc between any two GCDs in the Fire Phase.</p>
 	<h4>Xenoglossy</h4>
 		<p>Use Xeno as a filler Spell for UI, to weave oGCDs, or for raid buffs (but not at the cost of uptime). Do not overwrite Xenos; when at two Polyglot stacks, use Xeno before one is overwritten.</p>
 	<h4>Sharpcast</h4>
@@ -167,8 +179,10 @@
 		<p>Use Manafont to extend Fire Phases, ideally weaved during an instant after Despair. MF gives enough MP to cast a F4, T3, and Despair. If you have no instant to weave MF in, hold it for the next rotation. Only clip to use MF if you will otherwise lose a use.</p>
 		<h5>Examples</h5>
 		<h6>Ideal MF Usage</h6>
+			<img src="images/blm/mfideal.png" />
 			<p>Using Xeno to gain maximum value out of Triplecast and Manafont.</p>
 		<h6>MF Without Triple / Swift</h6>
+			<img src="images/blm/mfnoswift.png" />
 			<p>Xeno in this figure is any instant.</p>
 	<h4>Surecast and Manaward</h4>
 		<p>When paired with Manaward, Surcast can often allow you to “eat” mechanics to keep casting. This is considered bad practice if it costs a healer a GCD; these things can usually be mitigated by improved planning and/or slidecasting.</p>
@@ -196,6 +210,7 @@
 			<li>Figure out how to avoid this situation in the future.</li></ol>
 	<h4>Example</h4>
 		<h5>Recovering with Freeze</h5>
+		<img src="images/blm/freezerecover.png" />
 		<p>The Umbral Heart from Freeze allows a 5x F4 + Despair Fire Phase. Note that this is only for recovery. It is not a DPS gain, nor is it a sustainable rotation.</p>
 	<h4>Reopeners</h4>
 		<p>During downtime, use Umbral Soul to maintain UI3 with 3 hearts. From there, you can T3 and continue the rotation as normal. Use Xeno before downtime as necessary to avoid overwriting a Polyglot stack.</p>
@@ -208,11 +223,14 @@
 		<p>Use Swift on Flare. Use Triple on Flares with the “Hot Flare” variation, even at high enemy counts.</p>
 		<p>The rotation should be adapted to the scenario and will vary on the mob count and HP. The Cold Flare and Hot Flare variations have similar dps.</p>
 	<h4>Hot Flare</h4>
+		<img src="images/blm/hotflare.png" />
 		<p>Use at 3-4 enemies, or if the mobs will die just after both Flares. The empty GCD represents a filler: T4, T4P, or Foul.</p>
 	<h4>Cold Flare</h4>
+		<img src="images/blm/coldflare.png" />
 		<p>Use at 5+ mobs, or if the mobs will die before the second Flare of the “Hot Flare” variation. The empty GCD represents a filler: T4, T4P, or Foul.</p>
 	<h4>Example</h4>
 	<h5>Quad Flare (in AF3, at least 1 Umbral Heart)</h5>
+		<img src="images/blm/quadflare.png" />
 
 <br /><h3 id="move">Movement and Uptime</h3><hr />
 	<p>BLM has no damaging oGCDs and a very simple rotation. To maximize dps, always be casting (ABC) and minimize uptime loss due to handling movement and mechanics.</p>
@@ -320,40 +338,44 @@
 
 <br /><h3 id="append">Appendix</h3><hr />
 	<h4>No Xeno or T3 Filler</h4>
+		<img src="images/blm/noxenofill.png" />
 		<p>A possible line if you enter UI with no Xeno and over ~12s on your DoT. Avoid hardcasting T3 in AF if choosing this line. May lead to a DPS loss if you do not have Xeno or T3P for the next UI.</p>
 		<p>If you have a T3P that will fall off before the next UI, use the proc and leverage Triple or Swift to complete the rotation. If Triple and Swift are unavailable in this scenario, it would have been better to do the aforementioned No Xeno or T3 filler.</p>
 		<p>This can be used after the No B4 Opener to save Xeno for later movement or raid buffs.</p>
 	<h4>Ley Lines Optimization</h4>
+	<img src="images/blm/leylinesopti.png" />
 		<p>Under Ley Lines, you may opt to skip B4 and F1 in your rotation. This requires ~1450 SpS to execute reliably, less with instants. This requires 2 mana ticks in UI3, adjust your Ice Phase accordingly.</p>
 
 <br /><h3 id="misc">Misc.</h3><hr />
 <h4>Changelog</h4>
 <p>
-<b>July 14, 2019</b><br />
-Doc is done but I must hide my powers :dab:.<br />
-<b>July 15</b><br />
-Changed rotation figures to reflect filler and proc icons. Laqi-senpai and Furst-san helping edit now uwu.<br />
-<b>July 17</b><br />
-Added Appendix.<br />
-Fix ToC, condense Weaving, Clipping, Appendix sections, move footnotes into main text, misc.<br />
-<b>July 22</b><br />
-Added bold to empty GCD text.<br />
-<b>August 8</b><br />
-Added Ley Lines Optimizations to Appendix.<br />
-<b>August 29</b><br />
-Edited Appendix.<br />
-<b>September 13</b><br />
-Change Weaving and Clipping link.<br />
-<b>September 28</b><br />
-Remove text implying overwriting T3 for ice filler is good.<br />
-<b>October 8</b><br />
-Added period to the end of Xenoglossy paragraph.<br />
-<b>October 26</b><br />
-Remove line in AOE section saying to Hot Flare with Swift.<br />
-<b>April 5, 2020</b><br />
-Added a macro section<br />
-<b>April 15, 2020</b><br />
-Added a leveling rotations section<br />
+	<dl style="margin-left:1em">
+	<dt>July 14, 2019</dd>
+		<dd>Doc is done but I must hide my powers :dab:.</dd>
+	<dt>July 15</dd>
+		<dd>Changed rotation figures to reflect filler and proc icons. Laqi-senpai and Furst-san helping edit now uwu.</dd>
+	<dt>July 17</dd>
+		<dd>Added Appendix.</dd>
+		<dd>Fix ToC, condense Weaving, Clipping, Appendix sections, move footnotes into main text, misc.</dd>
+	<dt>July 22</dd>
+		<dd>Added bold to empty GCD text.</dd>
+	<dt>August 8</dd>
+		<dd>Added Ley Lines Optimizations to Appendix.</dd>
+	<dt>August 29</dd>
+		<dd>Edited Appendix.</dd>
+	<dt>September 13</dd>
+		<dd>Change Weaving and Clipping link.</dd>
+	<dt>September 28</dd>
+		<dd>Remove text implying overwriting T3 for ice filler is good.</dd>
+	<dt>October 8</dd>
+		<dd>Added period to the end of Xenoglossy paragraph.</dd>
+	<dt>October 26</dd>
+		<dd>Remove line in AOE section saying to Hot Flare with Swift.</dd>
+	<dt>April 5, 2020</dd>
+		<dd>Added a macro section</dd>
+	<dt>April 15, 2020</dd>
+		<dd>Added a leveling rotations section</dd>
+	</dl>
 </p>
 
 <h4>About</h4>
