--- a/ast.html
+++ b/ast.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html>
 <head>
-	<title>Copied Factory | AST</title>
+	<title>Copied Factory | Template</title>
 	<link rel="stylesheet" href="downwith.css">
 	<meta charset="UTF-8">
 </head>
 <body>
-<!-- oh you're reading this? have fun! -->
+<!-- Header star- oh you're reading this? have fun! -->
 <div id="header">
-	<h1 style="display:inline">Copied Factory</h1><span><em>A website.</em></span>
+<div id="title">
+	<h1 style="display:inline">Copied Factory</h1>
+	<span><em>A website.</em></span>
+	<span style="float:right;margin-right:2em;"><a href="#top">Top</a></span>
 </div>
-<div id="nav"><hr /> <!-- Navigation start -->
+ <!-- Navigation start -->
+<div id="nav"><hr />
 	<nav>
 		<a href="index.html">HOME</a>
 	<!-- Tanks --><span>[Tanks]</span>
@@ -38,12 +42,14 @@
 		<a href="smn.html">SMN</a>
 		<a href="rdm.html">RDM</a>
 		<abbr title="Do not ask me about Blue Mage.">*</abbr>
-	</nav><hr /> <!-- Navigation End -->
+	</nav><hr />
 </div>
+	<!-- Navigation End -->
+</div>
+<!-- Header Ends -->
 
-<!-- Here be where page content actually starts! -->
-
-	<div id="body">
+<!-- Here be where page content actually starts! Anything not between these comments should be the same on every page. -->
+<div id="body">
 	
 		<image src="images/noast.png" alt="this is for rathi..." style="width:100%;">
 	
