--- a/blm.html
+++ b/blm.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html>
 <head>
-	<title>Copied Factory | BLM</title>
+	<title>Copied Factory | Template</title>
 	<link rel="stylesheet" href="downwith.css">
 	<meta charset="UTF-8">
 </head>
 <body>
-<!-- oh you're reading this? have fun! -->
+<!-- Header star- oh you're reading this? have fun! -->
 <div id="header">
-	<h1 style="display:inline">Copied Factory</h1><span><em>A website.</em></span>
+<div id="title">
+	<h1 style="display:inline">Copied Factory</h1>
+	<span><em>A website.</em></span>
+	<span style="float:right;margin-right:2em;"><a href="#top">Top</a></span>
 </div>
-<div id="nav"><hr /> <!-- Navigation start -->
+ <!-- Navigation start -->
+<div id="nav"><hr />
 	<nav>
 		<a href="index.html">HOME</a>
 	<!-- Tanks --><span>[Tanks]</span>
@@ -38,12 +42,14 @@
 		<a href="smn.html">SMN</a>
 		<a href="rdm.html">RDM</a>
 		<abbr title="Do not ask me about Blue Mage.">*</abbr>
-	</nav><hr /> <!-- Navigation End -->
+	</nav><hr />
 </div>
+	<!-- Navigation End -->
+</div>
+<!-- Header Ends -->
 
-<!-- Here be where page content actually starts! -->
-
-	<div id="body">
+<!-- Here be where page content actually starts! Anything not between these comments should be the same on every page. -->
+<div id="body">
 	
 <h2>5.X BLM Guide</h2>
 	<em>Last updated: April 15, 2020</em>
@@ -378,15 +384,14 @@
 	</dl>
 </p>
 
-<h4>About</h4>
-<p>This guide is currently maintained by the Mentors of the Balance Discord.</p>
-<p>Big thank you to Caro Kann of Exodus of Primal of Earth, CaroKann#1234 on Discord; for the hard work he put into making this.</p>
-<p>Special thanks to Laqi Thish for making the original 4.X BLM guide and providing resources to improve on BLM play. Without him, I would not be the player I am today. Also, I shamelessly stole his doc as a baseline for this one. Further thanks to Fürst Blumier for helping with the mathematical calculations and being an all-around bro.</p>
-<p>Shoutout to every BLM on the Balance Discord.</p>
+	<h4>About</h4>
+		<p>This guide is currently maintained by the Mentors of the Balance Discord.</p>
+		<p>Big thank you to Caro Kann of Exodus of Primal of Earth, CaroKann#1234 on Discord; for the hard work he put into making this.</p>
+		<p>Special thanks to Laqi Thish for making the original 4.X BLM guide and providing resources to improve on BLM play. Without him, I would not be the player I am today. Also, I shamelessly stole his doc as a baseline for this one. Further thanks to Fürst Blumier for helping with the mathematical calculations and being an all-around bro.</p>
+		<p>Shoutout to every BLM on the Balance Discord.</p>
 
 	
-	</div>
-
+</div>
 <!-- Here be where page content actually ends! -->
 
 </body>
