new rotation display

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Copied Factory | Template</title>
+	<title>Copied Factory</title>
 	<link rel="stylesheet" href="downwith.css">
 	<meta charset="UTF-8">
 </head>
