--- a/template.html
+++ b/template.html
@@ -51,7 +51,14 @@
 <!-- Here be where page content actually starts! Anything not between these comments should be the same on every page. -->
 <div id="body">
 	
-	
+<div class="rotation">
+	<img class="fire1" src="blm.png"/>
+	<img class="fire2" src="blm.png"/>
+	<img class="blizz1" src="blm.png"/>
+	<img class="enoc" src="blm.png"/>
+	<img class="triple" src="blm.png"/>
+</div>
+		
 </div>
 <!-- Here be where page content actually ends! -->
 
