--- a/404.html
+++ b/404.html
@@ -7,54 +7,56 @@
 </head>
 <body>
 <!-- Header star- oh you're reading this? have fun! -->
-<div id="header">
-<div id="title">
-	<h1 style="display:inline">Copied Factory</h1>
+<header>
+<div id="sitetitle">
+	<h1  class="title">Copied Factory</h1>
 	<span><em>A website.</em></span>
-	<span style="float:right;margin-right:2em;"><a href="#top">Top</a></span>
+	<span class="totop"><a href="#top">Top</a></span>
 </div>
+
  <!-- Navigation start -->
-<div id="nav"><hr />
-	<nav>
-		<a href="index.html">HOME</a>
+<nav id="sitenav">
+	<h2 class="hidden">Navigation</h2>
+		<a href="index.html" title="Home Page">HOME</a>
 	<!-- Tanks --><span>[Tanks]</span>
-		<a href="pld.html">PLD</a>
-		<a href="war.html">WAR</a>
-		<a href="drk.html">DRK</a>
-		<a href="gnb.html">GNB</a>
+		<a href="pld.html" title="Paladin Guide">PLD</a>
+		<a href="war.html" title="Warrior Guide">WAR</a>
+		<a href="drk.html" title="Dark Knight Guide">DRK</a>
+		<a href="gnb.html" title="Gunbreaker Guide">GNB</a>
 	<!-- Healers --><span>[Healers]</span>
-		<a href="whm.html">WHM</a>
-		<a href="sch.html">SCH</a>
-		<a href="ast.html">AST</a>
-		<a href="sge.html">SGE</a>
+		<a href="whm.html" title="White Mage Guide">WHM</a>
+		<a href="sch.html" title="Scholar Guide">SCH</a>
+		<a href="ast.html" title="Astrologian Guide">AST</a>
+		<a href="sge.html" title="Sage Guide">SGE</a>
 	<!-- Melees --><span>[Melee]</span>
-		<a href="mnk.html">MNK</a>
-		<a href="drg.html">DRG</a>
-		<a href="nin.html">NIN</a>
-		<a href="sam.html">SAM</a>
-		<a href="rpr.html">RPR</a>
+		<a href="mnk.html" title="Monk Guide">MNK</a>
+		<a href="drg.html" title="Dragoon Guide">DRG</a>
+		<a href="nin.html" title="Ninja Guide">NIN</a>
+		<a href="sam.html" title="Samurai Guide">SAM</a>
+		<a href="rpr.html" title="Reaper Guide">RPR</a>
 	<!-- Rangeds --><span>[Ranged]</span>
-		<a href="brd.html">BRD</a>
-		<a href="mch.html">MCH</a>
-		<a href="dnc.html">DNC</a>
+		<a href="brd.html" title="Bard Guide">BRD</a>
+		<a href="mch.html" title="Machinist Guide">MCH</a>
+		<a href="dnc.html" title="Dancer Guide">DNC</a>
 	<!-- Casters --><span>[Casters]</span>
-		<a href="blm.html">BLM</a>
-		<a href="smn.html">SMN</a>
-		<a href="rdm.html">RDM</a>
+		<a href="blm.html" title="Black Mage Guide">BLM</a>
+		<a href="smn.html" title="Summoner Guide">SMN</a>
+		<a href="rdm.html" title="Red Mage Guide">RDM</a>
 		<abbr title="Do not ask me about Blue Mage.">*</abbr>
-	</nav><hr />
-</div>
+	<!-- Other --><span>[Other]</span>
+		<a href="tips.html" title="General Combat Tips">TIPS</a>
+		<a href="faq.html" title="About and FAQ">FAQ</a>
+</nav>
+
+
 	<!-- Navigation End -->
-</div>
+</header>
 <!-- Header Ends -->
 
 <!-- Here be where page content actually starts! Anything not between these comments should be the same on every page. -->
-<div id="body">
-	
+<article>
 	<h1>Error 404: This doesn't exist. Probably because I didn't make it. Your loss.
-	
-	</div>
-
+</article>
 <!-- Here be where page content actually ends! -->
 
 </body>
