--- a/index.html
+++ b/index.html
@@ -6,59 +6,66 @@
 	<meta charset="UTF-8">
 </head>
 <body>
+
 <!-- Header star- oh you're reading this? have fun! -->
-<div id="header">
-<div id="title">
-	<h1 style="display:inline">Copied Factory</h1>
+<header>
+<div id="sitetitle">
+	<h1  class="title">Copied Factory</h1>
 	<span><em>A website.</em></span>
-	<span style="float:right;margin-right:2em;"><a href="#top">Top</a></span>
+	<span class="totop"><a href="#top">Top</a></span>
 </div>
+
  <!-- Navigation start -->
-<div id="nav"><hr />
-	<nav>
-		<a href="index.html">HOME</a>
+<nav id="sitenav">
+	<h2 class="hidden">Navigation</h2>
+		<a href="index.html" title="Home Page">HOME</a>
 	<!-- Tanks --><span>[Tanks]</span>
-		<a href="pld.html">PLD</a>
-		<a href="war.html">WAR</a>
-		<a href="drk.html">DRK</a>
-		<a href="gnb.html">GNB</a>
+		<a href="pld.html" title="Paladin Guide">PLD</a>
+		<a href="war.html" title="Warrior Guide">WAR</a>
+		<a href="drk.html" title="Dark Knight Guide">DRK</a>
+		<a href="gnb.html" title="Gunbreaker Guide">GNB</a>
 	<!-- Healers --><span>[Healers]</span>
-		<a href="whm.html">WHM</a>
-		<a href="sch.html">SCH</a>
-		<a href="ast.html">AST</a>
-		<a href="sge.html">SGE</a>
+		<a href="whm.html" title="White Mage Guide">WHM</a>
+		<a href="sch.html" title="Scholar Guide">SCH</a>
+		<a href="ast.html" title="Astrologian Guide">AST</a>
+		<a href="sge.html" title="Sage Guide">SGE</a>
 	<!-- Melees --><span>[Melee]</span>
-		<a href="mnk.html">MNK</a>
-		<a href="drg.html">DRG</a>
-		<a href="nin.html">NIN</a>
-		<a href="sam.html">SAM</a>
-		<a href="rpr.html">RPR</a>
+		<a href="mnk.html" title="Monk Guide">MNK</a>
+		<a href="drg.html" title="Dragoon Guide">DRG</a>
+		<a href="nin.html" title="Ninja Guide">NIN</a>
+		<a href="sam.html" title="Samurai Guide">SAM</a>
+		<a href="rpr.html" title="Reaper Guide">RPR</a>
 	<!-- Rangeds --><span>[Ranged]</span>
-		<a href="brd.html">BRD</a>
-		<a href="mch.html">MCH</a>
-		<a href="dnc.html">DNC</a>
+		<a href="brd.html" title="Bard Guide">BRD</a>
+		<a href="mch.html" title="Machinist Guide">MCH</a>
+		<a href="dnc.html" title="Dancer Guide">DNC</a>
 	<!-- Casters --><span>[Casters]</span>
-		<a href="blm.html">BLM</a>
-		<a href="smn.html">SMN</a>
-		<a href="rdm.html">RDM</a>
+		<a href="blm.html" title="Black Mage Guide">BLM</a>
+		<a href="smn.html" title="Summoner Guide">SMN</a>
+		<a href="rdm.html" title="Red Mage Guide">RDM</a>
 		<abbr title="Do not ask me about Blue Mage.">*</abbr>
-	</nav><hr />
-</div>
+	<!-- Other --><span>[Other]</span>
+		<a href="tips.html" title="General Combat Tips">TIPS</a>
+		<a href="faq.html" title="About and FAQ">FAQ</a>
+</nav>
+
+
 	<!-- Navigation End -->
-</div>
+</header>
 <!-- Header Ends -->
 
-<!-- Here be where page content actually starts! Anything not between these comments should be the same on every page. -->
-<div id="body">
 
-	<h3>What is this?</h3>
-		<p>This is a site hosting copied versions of the most current (as I feel like updating) job guides for FFXIV. The site aims to be as simple as possible with few images and simply formatted text. Everything is manually done and updated when I can. This is a solo project so don't expect much.</p>
-	<h3>Why is this?</h3>
-		<p>I hate discord and google docs being used for guide hosting. I had some free time. That's it.</p>
-	<h3>Did you write these guides?</h3>
-		<p>Nope. Authors should be credited on a per guide basis. Hopefully!</p>
-	</div>
-	
+<!-- Here be where page content actually starts! Anything not between these comments should be the same on every page. -->
+<article>
+<div class="guidetitle">
+	<h2 class="title">Welcome!</h2>
+	<span>|<em>Updated: 8:50 AM 11/27/2021</em></span>
+</div>
+<p> This site is currently for hosting of guides written and or reformatted from various other guide sites. (Hence the name...) Currently we're mainly focusing on site structure more so than the writing and copying of guides. Endwalker is now less than a week away and once the dust settles on the shiny new expansion features writing will commence in full!</p>
+<h4>Hey? What's the point of this?</h4>
+<p>This should be on the FAQ but I can imagine this might be too common of a question. I'm doing this for a few main reasons:<p>
+<ol><li>I started on the concept for this before the balance discord launched it's website and icy veins started hosting ffxiv guides in ernest.</li><li>I have friends who don't like the way a lot of the currently written guides are explained and I like helping my friends.</li><li>It's fun! I enjoy FFXIV and I enjoy making silly little websites. That alone is enough to make me want to work on this. It's a passion project funded purely out of pocket and worked on purely out of love. <sub>(And maybe a little bit out of some residual spite of being tired of google doc guides...)</sub></p>
+</article>	
 <!-- Here be where page content actually ends! -->
 
 </body>
